# snn-numba

./: .gitignore  README.md  pyproject.toml
bench/: build_cpp.sh  common.py  run_bench.py
bench/results/: accuracy.csv  speed.csv
examples/: quickstart.py
src/snn_numba/: __init__.py  _graph.py  _kernels.py  snn.py  squidpy.py
tests/: test_graph.py  test_snn.py  test_squidpy_builder.py
