[project]
name = "snn-numba"
version = "0.1.0"
description = "Fast, exact, radius-based nearest-neighbor search (SNN) reimplemented in pure Python/Numba"
readme = "README.md"
authors = [
    { name = "Gregor Sturm", email = "mail@gregor-sturm.de" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "numba>=0.60",
    "scikit-learn>=1.4",
    "scipy>=1.11",
]

[project.optional-dependencies]
bench = [
    "pandas>=2.0",
    "matplotlib>=3.8",
    "pybind11>=2.11",
    "tabulate>=0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
